# pass-fxa

./: Cargo.toml  README.md
.github/workflows/: release.yml
helpers/: Cargo.toml
lib/: Cargo.toml  README.md
lib/src/: lib.rs
scripts/: generate_passwords_count.sh
src/: api.rs  crypto.rs  main.rs
