[package]
name = "pass-fxa"
description = "Upload a password-store to Firefox Accounts"
categories = ["command-line-utilities"]
keywords = ["pass", "passwordstore", "mozilla", "password-manager"]
authors = ["Nils <nils@nilsand.re>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/NilsIrl/pass-fxa/"
readme = "README.md"
version = "0.1.0"
edition = "2018"

[profile.release]
lto = true
codegen-units = 1

[workspace]
members = [
    "helpers",
]

[dependencies]
pass-fxa-lib = { version = "0.1.0", path = "lib" }

tokio = { version = "1.8.2", default-features = false, features = ["rt", "macros"] }

#prs-lib = { version = "0.2.14", default-features = false, features = ["backend-gpgme"] }
prs-lib = "0.2.14"

serde = { version = "1.0.126", features = [ "derive" ] }

url = { version = "2.2.2" }

structopt = "0.3.22"
log = "0.4.14"
env_logger = "0.9.0"

