[package]
name = "pass-fxa-lib"
description = "Library to interact with passwords stored on FxA"
categories = ["authentication"]
keywords = ["mozilla", "firefox", "password", "password-manager"]
authors = ["Nils <nils@nilsand.re>"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/NilsIrl/pass-fxa/"
version = "0.4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7.4"
block-modes = "0.8.1"
pbkdf2 = { version = "0.8.0", default-features = false }
hkdf = "0.11.0"
hmac = "0.11.0"
sha2 = "0.9.5"
rsa = "0.4.0"

tokio = { version = "1.8.2", default-features = false, features = ["time"] }
futures = "0.3.16"

serde = { version = "1.0.126", features = [ "derive" ] }
serde_json = "1.0.64"
serde_with = { version = "1.9.4", default-features = false, features = [ "json" ] }
hex = "0.4.3"

rand = "0.8.4"

hawk = "3.2.1"

secstr = { version = "0.4.0", features = ["serde"] }

reqwest = { version = "0.11.4", default-features = false, features = [ "json", "rustls-tls" ] }

url = { version = "2.2.2", features = ["serde"] }
base64 = "0.13.0"

log = "0.4.14"
